--- a/package.json
+++ b/package.json
@@ -16,5 +16,14 @@
   },
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EldinKecap/FullStackRecipeApp.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/EldinKecap/FullStackRecipeApp/issues"
+  },
+  "homepage": "https://github.com/EldinKecap/FullStackRecipeApp#readme",
   "description": ""
 }
